Bug 1240336 Setting same value to either <input> or <textarea> shouldn't cause committing existing composition r=ehsan